Bug 481380 - Docked floating panel obscures adjacent screen with its blurred background
Summary: Docked floating panel obscures adjacent screen with its blurred background
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 5.93.0
Platform: Arch Linux Linux
: HI minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: multiscreen, qt6
: 481581 482088 483128 483851 487519 487541 487828 488402 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-02-15 20:48 UTC by Bernhard
Modified: 2024-06-14 17:12 UTC (History)
14 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.0
Sentry Crash Report:


Attachments
panel obscuring adjacent screen (1.41 MB, video/webm)
2024-02-15 20:48 UTC, Bernhard
Details
attachment-721535-0.html (1.38 KB, text/html)
2024-02-16 23:20 UTC, Bernhard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard 2024-02-15 20:48:35 UTC
Created attachment 165840 [details]
panel obscuring adjacent screen

SUMMARY
When a floating panel on the edge between two screens "docks" because a window is pushing it to the side, part of it's transparent background is visible on an adjacent screen. See attached video

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.93.0
KDE Frameworks Version: 5.249.0
Qt Version: 6.7.0
Kernel Version: 6.6.16-1-lts (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
In case it is important, here is my screen configuration:

$ kscreen-doctor -o | grep -e Geometry -e Scale -e Modes
	Modes:  [...] 2:3840x2160@120* [...]
	Geometry: 1280,0 3840x2160
	Scale: 1
	Modes:  0:2560x1440@60*!  [...]
	Geometry: 0,0 1280x2276
	Scale: 1.125
Comment 1 fanzhuyifan 2024-02-16 16:49:49 UTC
can't reproduce on arch linux, wayland, plasma source build. I don't see the blue highlight at all.
Comment 2 Niccolò Venerandi 2024-02-16 22:17:13 UTC
(This seems to be the contrast effect)
Comment 3 Bernhard 2024-02-16 23:20:43 UTC
Created attachment 165875 [details]
attachment-721535-0.html

Might be worth mentioning that Alacrity (the terminal) is also set to use
plasma background blur effect (in case there is some strange interaction)

On Fri, 16 Feb 2024, 23:17 Niccolò Venerandi, <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=481380
>
> Niccolò Venerandi <niccolo@venerandi.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>                  CC|                            |niccolo@venerandi.com
>
> --- Comment #2 from Niccolò Venerandi <niccolo@venerandi.com> ---
> (This seems to be the contrast effect)
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 4 Bernhard 2024-02-17 14:04:21 UTC
I can't reproduce this anymore with Qt 6.7 beta3
Comment 5 Nate Graham 2024-02-23 21:00:08 UTC
*** Bug 481581 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2024-02-23 21:01:05 UTC
Can reproduce on Wayland. The panel has to be on any screen edge that's shared with another screen. When it de-floats, a blurry bar appears on the other screen.
Comment 7 Nate Graham 2024-03-01 07:10:29 UTC
*** Bug 482088 has been marked as a duplicate of this bug. ***
Comment 8 Bernhard 2024-03-09 11:10:56 UTC
It did come back for me too, but it seems to be intermittent and I have no idea how to trigger it
Comment 9 Nate Graham 2024-03-10 23:12:19 UTC
*** Bug 483128 has been marked as a duplicate of this bug. ***
Comment 10 Niccolò Venerandi 2024-03-20 07:50:25 UTC
*** Bug 483851 has been marked as a duplicate of this bug. ***
Comment 11 Synthetic451 2024-03-20 08:21:34 UTC
@Bernhard, I can reliably reproduce it by disconnecting and reconnecting my external monitor. Bug doesn't appear until the monitor has been disconnected at least once. My steps to reproduce and more details are listed in my duped bug 483851 if anyone's curious.
Comment 12 Niccolò Venerandi 2024-03-24 10:43:48 UTC
(In reply to Benjamin Xiao from comment #11)
> @Bernhard, I can reliably reproduce it by disconnecting and reconnecting my
> external monitor. Bug doesn't appear until the monitor has been disconnected
> at least once. My steps to reproduce and more details are listed in my duped
> bug 483851 if anyone's curious.

Great job, disconnecting and re-connecting is the trick to reproduce this bug! Now I can begin to investigate it.
Comment 13 Niccolò Venerandi 2024-05-25 09:29:36 UTC
*** Bug 487519 has been marked as a duplicate of this bug. ***
Comment 14 Niccolò Venerandi 2024-05-31 08:33:48 UTC
*** Bug 487546 has been marked as a duplicate of this bug. ***
Comment 15 fanzhuyifan 2024-05-31 16:37:53 UTC
*** Bug 487828 has been marked as a duplicate of this bug. ***
Comment 16 Nate Graham 2024-06-07 20:12:11 UTC
Git commit 2a125115418869eeb62c0dab8b7069202bf1fd5b by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 07/06/2024 at 20:12.
Pushed by ngraham into branch 'master'.

shell/panelview: Use the panel geometry as a fallback for the mask

It seems like in some scenarios (e.g. detaching and reattaching monitors) ksvg provides
an empty mask until the panel is re-drawn; as a first workaround, we add a fallback that
avoids the panel spilling into other monitors when an empty mask is provided.
FIXED-IN: 6.1

M  +5    -2    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/2a125115418869eeb62c0dab8b7069202bf1fd5b
Comment 17 Nate Graham 2024-06-07 20:34:43 UTC
Git commit cab776414ab2960826e824a4ba4cbc54c5591c24 by Nate Graham.
Committed on 07/06/2024 at 20:12.
Pushed by ngraham into branch 'Plasma/6.1'.

shell/panelview: Use the panel geometry as a fallback for the mask

It seems like in some scenarios (e.g. detaching and reattaching monitors) ksvg provides
an empty mask until the panel is re-drawn; as a first workaround, we add a fallback that
avoids the panel spilling into other monitors when an empty mask is provided.
FIXED-IN: 6.1


(cherry picked from commit 2a125115418869eeb62c0dab8b7069202bf1fd5b)

b52a2dc8 Use the panel geometry as a fallback for the mask

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>

M  +5    -2    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/cab776414ab2960826e824a4ba4cbc54c5591c24
Comment 18 Nate Graham 2024-06-12 18:28:21 UTC
*** Bug 488402 has been marked as a duplicate of this bug. ***
Comment 19 Nate Graham 2024-06-14 17:12:21 UTC
*** Bug 487541 has been marked as a duplicate of this bug. ***