shell/panelview: Use the panel geometry as a fallback for the mask

It seems like in some scenarios (e.g. detaching and reattaching monitors) ksvg provides
an empty mask until the panel is re-drawn; as a first workaround, we add a fallback that
avoids the panel spilling into other monitors when an empty mask is provided.

BUG: 481380
FIXED-IN: 6.1